--- a/contact-1.html
+++ b/contact-1.html
@@ -80,14 +80,14 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="home-1.html" class="flex items-center">
+            <a href="index.html" class="flex items-center">
             <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
             <div class="hidden md:flex space-x-8">
-                <a href="home-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
+                <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
                 <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
                 <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
-                <a href="home-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
-                <a href="home-1.html#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
+                <a href="index.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
+                <a href="index.html#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
                 <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
             </div>
             
@@ -448,11 +448,11 @@
                 <div>
                     <h3 class="text-xl font-bold mb-6">Quick Links</h3>
                     <ul class="space-y-3">
-                        <li><a href="home-1.html" class="text-gray-400 hover:text-primary transition-colors">Home</a></li>
+                        <li><a href="index.html" class="text-gray-400 hover:text-primary transition-colors">Home</a></li>
                         <li><a href="about-1.html" class="text-gray-400 hover:text-primary transition-colors">About</a></li>
                         <li><a href="services-2.html" class="text-gray-400 hover:text-primary transition-colors">Services</a></li>
-                        <li><a href="home-1.html#gallery" class="text-gray-400 hover:text-primary transition-colors">Gallery</a></li>
-                        <li><a href="home-1.html#blog" class="text-gray-400 hover:text-primary transition-colors">Blog</a></li>
+                        <li><a href="index.html#gallery" class="text-gray-400 hover:text-primary transition-colors">Gallery</a></li>
+                        <li><a href="index.html#blog" class="text-gray-400 hover:text-primary transition-colors">Blog</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">Contact</a></li>
                     </ul>
                 </div>
