Update and rename home-1.html to index.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="home-1.html" class="flex items-center">
+            <a href="index.html" class="flex items-center">
             <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
             <div class="hidden md:flex space-x-8">
                 <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
