--- a/services-2.html
+++ b/services-2.html
@@ -180,10 +180,10 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="home-1.html" class="flex items-center">
+            <a href="index.html" class="flex items-center">
             <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
             <div class="hidden md:flex space-x-8">
-                <a href="home-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
+                <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
                 <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
                 <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
                 <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
@@ -204,10 +204,10 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg absolute w-full">
             <div class="container mx-auto px-6 py-4 flex flex-col space-y-4">
-                <a href="home-1.html" class="text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
+                <a href="index.html" class="text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
                 <a href="about-1.html" class="text-gray-800 font-medium hover:text-primary transition-colors">About</a>
                 <a href="services-2.html" class="text-gray-800 font-medium hover:text-primary transition-colors">Services</a>
-                <a href="home-1.html#gallery" class="text-gray-800 font-medium hover:text-primary transition-colors">Gallery</a>
+                <a href="index.html#gallery" class="text-gray-800 font-medium hover:text-primary transition-colors">Gallery</a>
                 <a href="#" class="text-gray-800 font-medium hover:text-primary transition-colors">Contact</a>
                 <a href="http://wa.me/254722756629" class="bg-primary text-white font-semibold px-6 py-2 !rounded-button shadow-md hover:shadow-lg transition-all text-center whitespace-nowrap">Get a Quote</a>
             </div>
@@ -394,7 +394,7 @@
             </div>
             
             <div class="mt-16 text-center fade-in">
-                <a href="home-1.html#gallery" class="inline-block bg-primary text-white font-semibold px-8 py-3 !rounded-button shadow-md hover:shadow-lg transition-all whitespace-nowrap">View All Projects</a>
+                <a href="index.html#gallery" class="inline-block bg-primary text-white font-semibold px-8 py-3 !rounded-button shadow-md hover:shadow-lg transition-all whitespace-nowrap">View All Projects</a>
             </div>
         </div>
     </section>
@@ -730,7 +730,7 @@
                 <div>
                     <h3 class="text-xl font-bold mb-6">Quick Links</h3>
                     <ul class="space-y-3">
-                        <li><a href="home-1.html" class="text-gray-400 hover:text-primary transition-colors">Home</a></li>
+                        <li><a href="index.html" class="text-gray-400 hover:text-primary transition-colors">Home</a></li>
                         <li><a href="about-1.html" class="text-gray-400 hover:text-primary transition-colors">About</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">Services</a></li>
                         <li><a href="#gallery" class="text-gray-400 hover:text-primary transition-colors">Gallery</a></li>
