--- a/services-2.html
+++ b/services-2.html
@@ -184,8 +184,8 @@
             <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
             <div class="hidden md:flex space-x-8">
                 <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
-                <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
-                <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+                <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
+                <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
                 <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
                 <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
                 <a href="contact-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
@@ -206,9 +206,9 @@
             <div class="container mx-auto px-6 py-4 flex flex-col space-y-4">
                 <a href="index.html" class="text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
                 <a href="about-1.html" class="text-gray-800 font-medium hover:text-primary transition-colors">About</a>
-                <a href="services-2.html" class="text-gray-800 font-medium hover:text-primary transition-colors">Services</a>
+                <a href="#" class="text-gray-800 font-medium hover:text-primary transition-colors">Services</a>
                 <a href="index.html#gallery" class="text-gray-800 font-medium hover:text-primary transition-colors">Gallery</a>
-                <a href="#" class="text-gray-800 font-medium hover:text-primary transition-colors">Contact</a>
+                <a href="contact-1.html" class="text-gray-800 font-medium hover:text-primary transition-colors">Contact</a>
                 <a href="http://wa.me/254722756629" class="bg-primary text-white font-semibold px-6 py-2 !rounded-button shadow-md hover:shadow-lg transition-all text-center whitespace-nowrap">Get a Quote</a>
             </div>
         </div>
