--- a/services-2.html
+++ b/services-2.html
@@ -1035,5 +1035,13 @@
             });
         });
     </script>
+	<script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  toggleBtn.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+  });
+</script>
 </body>
 </html>
