--- a/about-1.html
+++ b/about-1.html
@@ -242,8 +242,8 @@
     <!-- Desktop Menu -->
     <div class="hidden md:flex space-x-8">
       <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
-      <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
-      <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+      <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
+      <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
       <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
       <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
       <a href="contact-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
