--- a/contact-1.html
+++ b/contact-1.html
@@ -77,29 +77,35 @@
     </style>
 </head>
 <body class="bg-white min-h-screen">
-    <!-- Navbar -->
-    <nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="flex items-center">
-            <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
-            <div class="hidden md:flex space-x-8">
-                <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
-                <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
-                <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
-                <a href="index.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
-                <a href="index.html#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
-                <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
-            </div>
-            
-            <div class="flex items-center space-x-4">         
-                <button class="bg-primary text-white px-6 py-2 !rounded-button font-medium hover:bg-opacity-90 transition-all whitespace-nowrap hidden md:block">Get a Quote</button>
-                
-                <button class="w-10 h-10 flex items-center justify-center text-gray-700 md:hidden">
-                    <i class="ri-menu-line ri-xl"></i>
-                </button>
-            </div>
-        </div>
-    </nav>
+<!-- Navbar -->
+<nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300 bg-white">
+  <div class="container mx-auto flex justify-between items-center">
+    <a href="index.html" class="flex items-center">
+      <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto"
+        onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
+    </a>
+
+    <!-- Desktop Menu -->
+    <div class="hidden md:flex space-x-8">
+      <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
+      <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
+      <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+      <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
+      <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
+      <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
+    </div>
+
+    <!-- Mobile Toggle Button -->
+    <div class="flex items-center space-x-4">
+      <a href="http://wa.me/254722756629"
+        class="bg-primary text-white px-6 py-2 !rounded-button font-medium hover:bg-opacity-90 transition-all whitespace-nowrap hidden md:block">Get
+        a Quote</a>
+
+      <button id="menu-toggle" class="w-10 h-10 flex items-center justify-center text-gray-700 md:hidden">
+        <i class="ri-menu-line ri-xl"></i>
+      </button>
+    </div>
+  </div>
 
     <!-- Hero Section -->
     <section class="hero-gradient py-20 relative overflow-hidden">
@@ -607,5 +613,13 @@
             });
         });
     </script>
+	<script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  toggleBtn.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+  });
+</script>
 </body>
 </html>
