--- a/index.html
+++ b/index.html
@@ -160,29 +160,35 @@
     </style>
 </head>
 <body class="bg-white">
-    <!-- Navbar -->
-    <nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="flex items-center">
-            <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
-            <div class="hidden md:flex space-x-8">
-                <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
-                <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
-                <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
-                <a href="#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
-                <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
-                <a href="contact-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
-            </div>
-            
-            <div class="flex items-center space-x-4">         
-                <a href="http://wa.me/254722756629" class="bg-primary text-white px-6 py-2 !rounded-button font-medium hover:bg-opacity-90 transition-all whitespace-nowrap hidden md:block">Get a Quote</a>
-                
-                <button class="w-10 h-10 flex items-center justify-center text-gray-700 md:hidden">
-                    <i class="ri-menu-line ri-xl"></i>
-                </button>
-            </div>
-        </div>
-    </nav>
+<!-- Navbar -->
+<nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300 bg-white">
+  <div class="container mx-auto flex justify-between items-center">
+    <a href="index.html" class="flex items-center">
+      <img src="images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto"
+        onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
+    </a>
+
+    <!-- Desktop Menu -->
+    <div class="hidden md:flex space-x-8">
+      <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
+      <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
+      <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+      <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
+      <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
+      <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
+    </div>
+
+    <!-- Mobile Toggle Button -->
+    <div class="flex items-center space-x-4">
+      <a href="http://wa.me/254722756629"
+        class="bg-primary text-white px-6 py-2 !rounded-button font-medium hover:bg-opacity-90 transition-all whitespace-nowrap hidden md:block">Get
+        a Quote</a>
+
+      <button id="menu-toggle" class="w-10 h-10 flex items-center justify-center text-gray-700 md:hidden">
+        <i class="ri-menu-line ri-xl"></i>
+      </button>
+    </div>
+  </div>
 
     <!-- Hero Section -->
     <section class="hero-section min-h-[90vh] flex items-center relative">
@@ -722,7 +728,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mb-12">
                 <div>
                     <a href="index.html" class="inline-block mb-4 flex items-center">
-  			<img src="Images/safi-logo.png" alt="SafiTech Ltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTech Ltd</span>');" />
+  			<img src="images/safi-logo.png" alt="SafiTech Ltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTech Ltd</span>');" />
 			</a>
                     <p class="text-gray-400 mb-6">Premium paint products and professional painting services for residential and commercial clients.</p>
                     <div class="flex space-x-4">
@@ -916,5 +922,13 @@
             });
         });
     </script>
+	<script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  toggleBtn.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+  });
+</script>
 </body>
 </html>
