--- a/services-2.html
+++ b/services-2.html
@@ -181,7 +181,7 @@
 <nav id="navbar" class="navbar fixed w-full z-50 px-4 py-3 transition-all duration-300 bg-white">
   <div class="container mx-auto flex justify-between items-center">
     <a href="index.html" class="flex items-center">
-      <img src="Images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto"
+      <img src="images/safi-logo.png" alt="SafiTechltd" class="h-10 w-auto"
         onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTechltd</span>');" />
     </a>
 
@@ -715,7 +715,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mb-12">
                 <div>
                     <a href="index.html" class="inline-block mb-4 flex items-center">
-  			<img src="Images/safi-logo.png" alt="SafiTech Ltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTech Ltd</span>');" />
+  			<img src="images/safi-logo.png" alt="SafiTech Ltd" class="h-10 w-auto" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<span class=\'text-3xl font-[Pacifico] text-primary\'>SafiTech Ltd</span>');" />
 			</a>
                     <p class="text-gray-400 mb-6">Premium paint products and professional painting services for residential and commercial clients.</p>
                     <div class="flex space-x-4">
