--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </button>
     </div>
   </div>
-
+</nav>
     <!-- Hero Section -->
     <section class="hero-section min-h-[90vh] flex items-center relative">
         <div class="absolute inset-0 bg-gradient-to-r from-white via-white/90 to-transparent"></div>
