--- a/contact-1.html
+++ b/contact-1.html
@@ -106,7 +106,7 @@
       </button>
     </div>
   </div>
-
+</nav>
     <!-- Hero Section -->
     <section class="hero-gradient py-20 relative overflow-hidden">
         <div class="container mx-auto px-6 w-full">
