--- a/contact-1.html
+++ b/contact-1.html
@@ -89,10 +89,10 @@
     <div class="hidden md:flex space-x-8">
       <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
       <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
-      <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+      <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
       <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
       <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
-      <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
+      <a href="contact-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
     </div>
 
     <!-- Mobile Toggle Button -->
@@ -105,6 +105,20 @@
         <i class="ri-menu-line ri-xl"></i>
       </button>
     </div>
+  </div>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu"
+    class="md:hidden hidden px-4 pb-4 flex flex-col space-y-4 bg-white shadow-md transition-all duration-300">
+    <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
+    <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
+    <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+    <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
+    <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
+    <a href="contact-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
+    <a href="http://wa.me/254722756629"
+      class="bg-primary text-white text-center px-4 py-2 rounded-button font-medium hover:bg-opacity-90 transition-all">Get
+      a Quote</a>
   </div>
 </nav>
     <!-- Hero Section -->
