--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="hidden md:flex space-x-8">
       <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
       <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
-      <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+      <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
       <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
       <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
       <a href="contact-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
@@ -195,7 +195,7 @@
     class="md:hidden hidden px-4 pb-4 flex flex-col space-y-4 bg-white shadow-md transition-all duration-300">
     <a href="index.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Home</a>
     <a href="about-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">About</a>
-    <a href="#" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
+    <a href="services-2.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Services</a>
     <a href="about-1.html#gallery" class="text-gray-800 hover:text-primary font-medium transition-colors">Gallery</a>
     <a href="#blog" class="text-gray-800 hover:text-primary font-medium transition-colors">Blog</a>
     <a href="contact-1.html" class="text-gray-800 hover:text-primary font-medium transition-colors">Contact</a>
@@ -209,7 +209,7 @@
         <div class="absolute inset-0 bg-gradient-to-r from-white via-white/90 to-transparent"></div>
         <div class="container mx-auto px-4 relative z-10">
             <div class="w-full max-w-2xl">
-                <h1 class="text-5xl md:text-6xl font-bold text-gray-900 mb-6">Transform Your Space with Safi Ruff & Tuff Paint</h1>
+                <h1 class="text-5xl md:text-6xl font-bold text-gray-900 mb-6">Transform Your Space with Premium Paints</h1>
                 <p class="text-xl text-gray-700 mb-8">Professional painting services and high-quality paint products for your home or business. Bring your vision to life with our expert team.</p>
                 <div class="flex flex-wrap gap-4">
                     <a href="about-1.html" class="bg-primary text-white px-8 py-3 !rounded-button font-medium hover:bg-opacity-90 transition-all whitespace-nowrap">Learn More</a>
