--- a/about-1.html
+++ b/about-1.html
@@ -308,7 +308,7 @@
                         <div class="timeline-item w-64">
                             <div class="relative mb-4">
                                 <div class="w-full h-48 rounded-lg overflow-hidden">
-                                    <img src="https://readdy.ai/api/search-image?query=Small%20painting%20business%20starting%20up%2C%20two%20people%20in%20a%20small%20office%20planning%20their%20first%20projects%2C%20paint%20samples%20and%20business%20plan%20on%20desk%2C%20hopeful%20entrepreneurial%20atmosphere%2C%20warm%20lighting&width=400&height=300&seq=2&orientation=landscape" alt="Company Founded" class="w-full h-full object-cover">
+                                    <img src="images/2010.png" alt="Company Founded" class="w-full h-full object-cover">
                                 </div>
                                 <div class="absolute -bottom-5 -left-5 w-16 h-16 rounded-full bg-primary flex items-center justify-center text-white font-bold border-4 border-white">2010</div>
                             </div>
@@ -320,7 +320,7 @@
                         <div class="timeline-item w-64">
                             <div class="relative mb-4">
                                 <div class="w-full h-48 rounded-lg overflow-hidden">
-                                    <img src="https://readdy.ai/api/search-image?query=Small%20painting%20team%20of%20five%20people%20standing%20in%20front%20of%20their%20first%20company%20van%20with%20logo%2C%20proud%20moment%2C%20residential%20neighborhood%20background%2C%20sunny%20day%2C%20professional%20equipment%20visible&width=400&height=300&seq=3&orientation=landscape" alt="First Team Expansion" class="w-full h-full object-cover">
+                                    <img src="images/2013.png" alt="First Team Expansion" class="w-full h-full object-cover">
                                 </div>
                                 <div class="absolute -bottom-5 -left-5 w-16 h-16 rounded-full bg-secondary flex items-center justify-center text-white font-bold border-4 border-white">2013</div>
                             </div>
@@ -332,7 +332,7 @@
                         <div class="timeline-item w-64">
                             <div class="relative mb-4">
                                 <div class="w-full h-48 rounded-lg overflow-hidden">
-                                    <img src="https://readdy.ai/api/search-image?query=Modern%20painting%20company%20office%20opening%2C%20ribbon%20cutting%20ceremony%2C%20team%20members%20in%20branded%20uniforms%2C%20local%20business%20representatives%2C%20bright%20open%20office%20space%20with%20paint%20samples%20and%20project%20displays&width=400&height=300&seq=4&orientation=landscape" alt="Office Opening" class="w-full h-full object-cover">
+                                    <img src="images/2015.png" alt="Office Opening" class="w-full h-full object-cover">
                                 </div>
                                 <div class="absolute -bottom-5 -left-5 w-16 h-16 rounded-full bg-accent flex items-center justify-center text-white font-bold border-4 border-white">2015</div>
                             </div>
@@ -344,7 +344,7 @@
                         <div class="timeline-item w-64">
                             <div class="relative mb-4">
                                 <div class="w-full h-48 rounded-lg overflow-hidden">
-                                    <img src="https://readdy.ai/api/search-image?query=Professional%20painters%20working%20on%20a%20large%20commercial%20building%2C%20multiple%20team%20members%20on%20scaffolding%2C%20company%20trucks%20in%20foreground%2C%20significant%20project%20scale%20visible%2C%20professional%20equipment&width=400&height=300&seq=5&orientation=landscape" alt="First Commercial Project" class="w-full h-full object-cover">
+                                    <img src="images/2017.png" alt="First Commercial Project" class="w-full h-full object-cover">
                                 </div>
                                 <div class="absolute -bottom-5 -left-5 w-16 h-16 rounded-full bg-primary flex items-center justify-center text-white font-bold border-4 border-white">2017</div>
                             </div>
@@ -356,7 +356,7 @@
                         <div class="timeline-item w-64">
                             <div class="relative mb-4">
                                 <div class="w-full h-48 rounded-lg overflow-hidden">
-                                    <img src="https://readdy.ai/api/search-image?query=Painting%20company%20receiving%20industry%20award%20on%20stage%2C%20formal%20award%20ceremony%2C%20team%20members%20in%20business%20attire%20accepting%20trophy%2C%20professional%20event%20photography%2C%20recognition%20moment&width=400&height=300&seq=6&orientation=landscape" alt="Industry Recognition" class="w-full h-full object-cover">
+                                    <img src="images/2020.png" alt="Industry Recognition" class="w-full h-full object-cover">
                                 </div>
                                 <div class="absolute -bottom-5 -left-5 w-16 h-16 rounded-full bg-secondary flex items-center justify-center text-white font-bold border-4 border-white">2020</div>
                             </div>
@@ -368,7 +368,7 @@
                         <div class="timeline-item w-64">
                             <div class="relative mb-4">
                                 <div class="w-full h-48 rounded-lg overflow-hidden">
-                                    <img src="https://readdy.ai/api/search-image?query=Large%20professional%20painting%20team%20of%2020+%20people%20in%20branded%20uniforms%20standing%20in%20front%20of%20fleet%20of%20company%20vehicles%2C%20modern%20office%20building%20background%2C%20successful%20business%20growth%2C%20professional%20team%20photo&width=400&height=300&seq=7&orientation=landscape" alt="Major Expansion" class="w-full h-full object-cover">
+                                    <img src="images/2023.png" alt="Major Expansion" class="w-full h-full object-cover">
                                 </div>
                                 <div class="absolute -bottom-5 -left-5 w-16 h-16 rounded-full bg-accent flex items-center justify-center text-white font-bold border-4 border-white">2023</div>
                             </div>
@@ -380,7 +380,7 @@
                         <div class="timeline-item w-64">
                             <div class="relative mb-4">
                                 <div class="w-full h-48 rounded-lg overflow-hidden">
-                                    <img src="https://readdy.ai/api/search-image?query=Modern%20painting%20company%20celebrating%20anniversary%2C%20team%20celebration%20with%20cake%20and%20balloons%2C%20diverse%20team%20members%20in%20branded%20shirts%2C%20office%20decorated%20for%20celebration%2C%20professional%20photography&width=400&height=300&seq=8&orientation=landscape" alt="15th Anniversary" class="w-full h-full object-cover">
+                                    <img src="images/2025.png" alt="15th Anniversary" class="w-full h-full object-cover">
                                 </div>
                                 <div class="absolute -bottom-5 -left-5 w-16 h-16 rounded-full bg-primary flex items-center justify-center text-white font-bold border-4 border-white">2025</div>
                             </div>
