--- a/about-1.html
+++ b/about-1.html
@@ -478,8 +478,8 @@
                             </div>
                         </div>
                         <div class="relative h-80 md:h-auto">
-                            <div id="before-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://readdy.ai/api/search-image?query=Living%20room%20with%20old%20faded%20paint%2C%20worn%20walls%2C%20outdated%20color%2C%20visible%20imperfections%2C%20poor%20lighting%2C%20before%20professional%20painting%20renovation&width=600&height=400&seq=15&orientation=landscape');"></div>
-                            <div id="after-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('https://readdy.ai/api/search-image?query=Same%20living%20room%20after%20professional%20painting%2C%20bright%20modern%20color%20scheme%2C%20perfectly%20smooth%20walls%2C%20vibrant%20and%20fresh%20appearance%2C%20excellent%20lighting%2C%20dramatic%20transformation&width=600&height=400&seq=16&orientation=landscape'); clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);"></div>
+                            <div id="before-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/before');"></div>
+                            <div id="after-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/after'); clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);"></div>
                             <div id="slider-line" class="absolute top-0 bottom-0 w-1 bg-white left-1/2 transform -translate-x-1/2 z-10"></div>
                             <div id="slider-button" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-10 h-10 bg-white rounded-full shadow-lg z-20 flex items-center justify-center cursor-pointer">
                                 <div class="flex items-center justify-center">
