--- a/about-1.html
+++ b/about-1.html
@@ -276,7 +276,7 @@
   </div>
 </nav>
     <!-- Hero Section -->
-    <section class="relative min-h-screen flex items-center pt-16" style="background-image: url('https://readdy.ai/api/search-image?query=Professional%20painting%20team%20working%20together%20on%20a%20large%20residential%20project%2C%20bright%20natural%20lighting%2C%20team%20members%20in%20branded%20uniforms%20with%20paint%20rollers%20and%20brushes%2C%20showing%20teamwork%20and%20craftsmanship%2C%20high-quality%20professional%20photography%20with%20shallow%20depth%20of%20field&width=1920&height=1080&seq=1&orientation=landscape'); background-size: cover; background-position: center;">
+    <section class="relative min-h-screen flex items-center pt-16" style="background-image: url('images/hero-about.png'); background-size: cover; background-position: center;">
         <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/30"></div>
         <div class="container mx-auto px-4 relative z-10">
             <div class="max-w-2xl">
