--- a/about-1.html
+++ b/about-1.html
@@ -673,7 +673,7 @@
                 <!-- Gallery Item 1 -->
                 <div class="masonry-item gallery-item" data-category="residential interior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Modern%20living%20room%20with%20freshly%20painted%20light%20blue%20walls%2C%20contemporary%20furniture%2C%20large%20windows%2C%20professional%20interior%20painting%20result%2C%20bright%20and%20airy%20space&width=600&height=800&seq=18&orientation=portrait" alt="Modern Living Room" class="w-full">
+                        <img src="images/interior-2.png" alt="Modern Living Room" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Modern Living Room</h3>
                             <p class="text-white/80 mb-4">Complete interior painting with custom color consultation for this contemporary space.</p>
@@ -688,7 +688,7 @@
                 <!-- Gallery Item 2 -->
                 <div class="masonry-item gallery-item" data-category="commercial interior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Modern%20office%20space%20with%20professionally%20painted%20walls%20in%20corporate%20colors%2C%20open%20workspace%2C%20clean%20lines%2C%20professional%20commercial%20painting%20project&width=600&height=400&seq=19&orientation=landscape" alt="Corporate Office" class="w-full">
+			    <img src="images/interior-4.png" class="w-full">" alt="Corporate Office" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Corporate Office</h3>
                             <p class="text-white/80 mb-4">Complete repainting of this 5,000 sq ft office space with minimal business disruption.</p>
@@ -703,7 +703,7 @@
                 <!-- Gallery Item 3 -->
                 <div class="masonry-item gallery-item" data-category="residential exterior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Beautiful%20colonial%20style%20home%20with%20freshly%20painted%20exterior%20in%20soft%20gray%20with%20white%20trim%2C%20professional%20exterior%20painting%2C%20perfect%20finish%2C%20curb%20appeal&width=600&height=450&seq=20&orientation=landscape" alt="Colonial Home Exterior" class="w-full">
+                        <img src="images/exterior-1.png" alt="Colonial Home Exterior" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Colonial Home Exterior</h3>
                             <p class="text-white/80 mb-4">Complete exterior repaint with color consultation and premium weather-resistant paint.</p>
@@ -718,7 +718,7 @@
                 <!-- Gallery Item 4 -->
                 <div class="masonry-item gallery-item" data-category="residential interior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Elegant%20dining%20room%20with%20accent%20wall%20in%20deep%20navy%20blue%2C%20contrasting%20white%20trim%2C%20crystal%20chandelier%2C%20professional%20interior%20painting%20with%20perfect%20finish&width=600&height=600&seq=21&orientation=squarish" alt="Dining Room Accent Wall" class="w-full">
+                        <img src="images/interior-3.png" alt="Dining Room Accent Wall" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Dining Room Accent Wall</h3>
                             <p class="text-white/80 mb-4">Custom accent wall with specialty finish to create a stunning focal point in this dining space.</p>
@@ -733,7 +733,7 @@
                 <!-- Gallery Item 5 -->
                 <div class="masonry-item gallery-item" data-category="commercial exterior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Modern%20retail%20storefront%20with%20freshly%20painted%20exterior%20in%20brand%20colors%2C%20large%20display%20windows%2C%20professional%20commercial%20painting%20project&width=600&height=400&seq=22&orientation=landscape" alt="Retail Storefront" class="w-full">
+                        <img src="images/exterior-2.png" alt="Retail Storefront" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Retail Storefront</h3>
                             <p class="text-white/80 mb-4">Brand-aligned exterior painting for this retail location to enhance visibility and customer appeal.</p>
@@ -748,7 +748,7 @@
                 <!-- Gallery Item 6 -->
                 <div class="masonry-item gallery-item" data-category="residential interior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Modern%20kitchen%20with%20freshly%20painted%20cabinets%20in%20white%20with%20blue%20island%2C%20professional%20cabinet%20painting%2C%20perfect%20smooth%20finish&width=600&height=800&seq=23&orientation=portrait" alt="Kitchen Cabinet Refinishing" class="w-full">
+                        <img src="images/interior-1.png" alt="Kitchen Cabinet Refinishing" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Kitchen Cabinet Refinishing</h3>
                             <p class="text-white/80 mb-4">Complete cabinet refinishing to transform this kitchen with a fresh, modern look without replacement.</p>
@@ -762,7 +762,7 @@
             </div>
             
             <div class="text-center mt-12">
-                <a href="#" class="bg-primary text-white px-8 py-3 !rounded-button whitespace-nowrap inline-flex items-center hover:bg-opacity-90 transition-all">
+                <a href="#gallery" class="bg-primary text-white px-8 py-3 !rounded-button whitespace-nowrap inline-flex items-center hover:bg-opacity-90 transition-all">
                     <span>View Full Portfolio</span>
                     <i class="ri-arrow-right-line ml-2"></i>
                 </a>
