--- a/about-1.html
+++ b/about-1.html
@@ -688,7 +688,7 @@
                 <!-- Gallery Item 2 -->
                 <div class="masonry-item gallery-item" data-category="commercial interior">
                     <div class="relative rounded-lg overflow-hidden">
-			    <img src="images/interior-4.png" class="w-full">" alt="Corporate Office" class="w-full">
+			    <img src="images/interior-4.png" alt="Corporate Office" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Corporate Office</h3>
                             <p class="text-white/80 mb-4">Complete repainting of this 5,000 sq ft office space with minimal business disruption.</p>
