--- a/services-2.html
+++ b/services-2.html
@@ -350,7 +350,7 @@
                 <!-- Project 3 -->
                 <div class="overflow-hidden rounded-lg shadow-md fade-in">
                     <div class="relative h-64 overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Elegant%20dining%20room%20with%20decorative%20wall%20finish%20featuring%20textured%20paint%20in%20a%20subtle%20gold%20pattern%20over%20cream%20base.%20The%20decorative%20technique%20creates%20a%20luxurious%20atmosphere%20with%20soft%20lighting%20highlighting%20the%20texture%20and%20depth%20of%20the%20specialized%20paint%20finish.&width=600&height=400&seq=4&orientation=landscape" alt="Decorative Project" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
+                        <img src="images/kitchen.png" alt="Decorative Project" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end">
                             <div class="p-6">
                                 <h3 class="text-xl font-semibold text-white mb-2">Luxury Dining Room Accent Wall</h3>
@@ -363,10 +363,10 @@
                 <!-- Project 4 -->
                 <div class="overflow-hidden rounded-lg shadow-md fade-in">
                     <div class="relative h-64 overflow-hidden">
-                        <img src="https://readdy.ai/api/search-image?query=Classic%20Victorian%20home%20exterior%20with%20fresh%20paint%20in%20heritage%20colors%2C%20featuring%20detailed%20trim%20work%20in%20contrasting%20colors.%20The%20paint%20job%20highlights%20the%20architectural%20details%20and%20brings%20new%20life%20to%20the%20historic%20structure.&width=600&height=400&seq=5&orientation=landscape" alt="Exterior Project" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
+                        <img src="images/exterior-2.png" alt="Exterior Project" class="w-full h-full object-cover object-top transition-transform duration-500 hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent flex items-end">
                             <div class="p-6">
-                                <h3 class="text-xl font-semibold text-white mb-2">Victorian Home Exterior</h3>
+                                <h3 class="text-xl font-semibold text-white mb-2">Beautiful Home Exterior</h3>
                                 <p class="text-white/80">Residential Exterior</p>
                             </div>
                         </div>
