--- a/about-1.html
+++ b/about-1.html
@@ -478,8 +478,8 @@
                             </div>
                         </div>
                         <div class="relative h-80 md:h-auto">
-                            <div id="before-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/before');"></div>
-                            <div id="after-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/after'); clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);"></div>
+                            <div id="before-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/before.png');"></div>
+                            <div id="after-image" class="absolute inset-0 bg-cover bg-center" style="background-image: url('images/after.png'); clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);"></div>
                             <div id="slider-line" class="absolute top-0 bottom-0 w-1 bg-white left-1/2 transform -translate-x-1/2 z-10"></div>
                             <div id="slider-button" class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-10 h-10 bg-white rounded-full shadow-lg z-20 flex items-center justify-center cursor-pointer">
                                 <div class="flex items-center justify-center">
@@ -733,7 +733,7 @@
                 <!-- Gallery Item 5 -->
                 <div class="masonry-item gallery-item" data-category="commercial exterior">
                     <div class="relative rounded-lg overflow-hidden">
-                        <img src="images/exterior-2.png" alt="Retail Storefront" class="w-full">
+                        <img src="images/retail.png" alt="Retail Storefront" class="w-full">
                         <div class="gallery-overlay absolute inset-0 bg-black/60 flex flex-col justify-end p-6 opacity-0 transition-opacity">
                             <h3 class="text-xl font-bold text-white mb-2">Retail Storefront</h3>
                             <p class="text-white/80 mb-4">Brand-aligned exterior painting for this retail location to enhance visibility and customer appeal.</p>
