--- a/about-1.html
+++ b/about-1.html
@@ -277,7 +277,7 @@
   </div>
 </nav>
     <!-- Hero Section -->
-    <section class="relative min-h-screen flex items-center pt-16" style="background-image: url('images/hero-about-1.png'); background-size: cover; background-position: center;">
+    <section class="relative min-h-screen flex items-center pt-16" style="background-image: url('images/heroabout.png'); background-size: cover; background-position: center;">
         <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/30"></div>
         <div class="container mx-auto px-4 relative z-10">
             <div class="max-w-2xl">
